Fix textarea focus state spacing
- only a problem if there's a hint below, added some spacing

--- a/app/assets/stylesheets/govuk_publishing_components/components/_textarea.scss
+++ b/app/assets/stylesheets/govuk_publishing_components/components/_textarea.scss
@@ -1,5 +1,11 @@
 @import "govuk/components/textarea/textarea";
 
-.gem-c-textarea .govuk-textarea {
-  margin-bottom: 0;
+.gem-c-textarea {
+  .govuk-textarea {
+    margin-bottom: 0;
+
+    + .govuk-hint {
+      margin-top: govuk-spacing(1);
+    }
+  }
 }
